cluster/apps/homepage/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homepage-basic-auth
  namespace: homepage
spec:
  basicAuth:
    secret: homepage-basic-auth
